# tec-prog-trabalhos

./: CMakeLists.txt  main.cpp
includes/: cadastro.hpp  disciplina.hpp  ficha_aluno.hpp  lista_alunos.hpp  lista_departamentos.hpp  lista_ficha_aluno.hpp  principal.hpp  universidade.hpp
linked-list/includes/: linked-list.hpp  node.hpp
linked-list/src/: linked-list.cpp  node.cpp
sistema-academico/: main  main.cpp
sistema-academico/includes/: aluno.hpp  departamento.hpp  disciplina.hpp  ficha_aluno.hpp  pessoa.hpp  principal.hpp  professor.hpp  universidade.hpp
sistema-academico/linked-list/includes/: linked-list.hpp  node.hpp
sistema-academico/linked-list/src/: linked-list.cpp  node.cpp
sistema-academico/src/: aluno.cpp  departamento.cpp  disciplina.cpp  ficha_aluno.cpp  pessoa.cpp  principal.cpp  professor.cpp  universidade.cpp
src/: aluno.cpp  cadastro.cpp  departamento.cpp  disciplina.cpp  ficha_aluno.cpp  lista_alunos.cpp  lista_departamentos.cpp  lista_ficha_aluno.cpp  pessoa.cpp  principal.cpp  professor.cpp  universidade.cpp
